--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,10 @@ packages = [{include = "shap_clustering"}]
 [tool.poetry.dependencies]
 python = "^3.8.10"
 shap = "^0.41.0"
-pycaret = "^2.3.10"
-numpy = "1.23"
-nbformat = "^5.7.3"
+lightgbm = "^3.3.5"
+scikit-learn = "^1.2.2"
+pandas = "^1.5.3"
+matplotlib = "^3.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
