--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -14,20 +14,11 @@ jobs:
         with:
           python-version: '3.8.16'
 
-      - name: Update pip
-        run: pip install --upgrade pip
+      - name: Poetry setup
+        uses: ClementWalter/poetry-action@v1
 
-      - name: Install poetry
-        run: pip install poetry
-
-      - name: Poetry restore lock file
-        run: poetry lock
-      
-      - name: Poetry install dependencies
+      - name: Install dependencies
         run: poetry install
-      
+
       - name: Run tests
         run: poetry run pytest --cov=src --cov-report=xml
-      
-      
-    
