--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,19 +6,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Copia os arquivos do repo
+      - name: Copy files from repository
         uses: actions/checkout@v3
 
-      - name: Install python version 3.8.16
+      - name: Install python 3.10.6
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8.16'
+          python-version: '3.10.6'
 
-      - name: Poetry setup
-        uses: ClementWalter/poetry-action@v1
+      - name: Install lib for llvm
+        run: apt install libedit-dev
+
+      - name: Install Poetry
+        run: pip install poetry
+
+      - name: Lock poetry
+        run: poetry lock
 
       - name: Install dependencies
         run: poetry install
 
-      - name: Run tests
-        run: poetry run pytest --cov=src --cov-report=xml
+      - name: Run code standards and tests
+        run: poetry run task test --cov-report=xml
+
