--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ pandas = "^2.0.0"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
 lightgbm = "^3.3.5"
-llvmlite = { git = "https://github.com/numba/llvmlite.git" }
-numba = { git = "https://github.com/numba/numba.git" }
+llvmlite = "^0.37.0"
+numba = "^0.54.1"
 shap = "^0.41.0"
 
 [tool.poetry.group.dev.dependencies]
