--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,15 @@ readme = "README.md"
 packages = [{include = "shap_clustering"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 numpy = "1.23.5"
 scikit-learn = "^1.2.2"
 pandas = "^2.0.0"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
 lightgbm = "^3.3.5"
-llvmlite = "^0.37.0"
-numba = "^0.54.1"
+llvmlite = { git = "https://github.com/numba/llvmlite.git" }
+numba = { git = "https://github.com/numba/numba.git" }
 shap = "^0.41.0"
 
 [tool.poetry.group.dev.dependencies]
