--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Upload coverage xml
         uses: codecov/codecov-action@v3
         with:
-          token: ${{ secrets.CODECOV }}
+          token: ${{ secrets.CODECOV_TOKEN }}
